# NSKHack

./: .gitignore  README.md  alembic.ini  ingest.py  main.py  ollama.yml  requirements.txt
azbooka_scrapper/: constants.py  main.py  pyproject.toml
backend/: .env.example  pyproject.toml  requirements.txt
backend/src/: ioc.py  main.py
backend/src/api/: handlers.py  schemas.py
backend/src/api/chat/: handlers.py  schemas.py
backend/src/api/messages/: handlers.py  schemas.py
backend/src/core/: entity.py
backend/src/core/chat/dto/: message.py
backend/src/core/chat/entities/: chat.py  message.py
backend/src/core/chat/models/: chat.py  message.py
backend/src/core/chat/repositories/: chat.py
backend/src/core/chat/use_cases/: chat.py  message.py
backend/src/core/commons/migrations/: env.py
config/: settings.py
core/: database.py  embedding.py  llm.py  search.py
data/knowledge_base/: azbooka.md  fz.md  pdffile.md  reglam_corp_11072025.md
db_metadata_v5/3b3cc6e6-13fc-4730-982a-fde3966a1e6d/: index_metadata.pickle
docker-composes/: storage.yml
frontend/: package-lock.json  package.json
fz_scrapper/: constants.py  main.py  pyproject.toml
knowledge_base/: faq_with_links.md  reglam_corp_11072025.md  Гражданский кодекс Российской Федерации (часть первая)  от 3-292-301.md  Федеральный закон от 06.04.2011 N 63-ФЗ (ред. от 21.04.2025).md  Федеральный закон от 18.07.2011 N 223-ФЗ (ред. от 08.08.2024.md  Федеральный закон от 26.07.2006 N 135-ФЗ (ред. от 24.06.2025-34-50.md
src/: config.py  main.py
utils/: file_processor.py  text_splitter.py
(+22 files in other folders)
