[project]
name = "azbooka-scrapper"
version = "0.1.0"
description = ""
authors = [
    {name = "mayurev",email = "yrev2011@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4 (>=4.13.5,<5.0.0)",
    "aiohttp (>=3.12.15,<4.0.0)",
    "requests (>=2.32.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
